<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/background_main"    
    >
    
    <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/phone1"
    
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="5dp"
        android:layout_gravity="center"
        android:background="@drawable/title_authorization"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/authorization" />
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:text="@string/input_phone_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editPhoneNumber"
                style="@style/EditAuthorization"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:ems="10"
                android:inputType="phone"
                android:textSize="25sp"
                android:singleLine="true"
                android:hint="@string/hint_phone_number"
                 >

                <requestFocus />
            </EditText>
 
            <ImageButton
                android:id="@+id/selectCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/help" />
        </LinearLayout>

        <Button
            android:id="@+id/butGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_selector"
            android:text="@string/get_code" 
            android:enabled="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/input_code" />

        <EditText
            android:id="@+id/editCode"
            style="@style/EditAuthorization"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:ems="10"
            android:numeric="integer"
            android:inputType="number"
            android:textSize="25sp" />

        <Button
            android:id="@+id/butConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:background="@drawable/button_selector"
            android:text="@string/confirm"
            android:enabled="false" />

       

    </LinearLayout>
        </LinearLayout>
              </LinearLayout>
